--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 28 03:21:07 IST 2014
-sdk.dir=C\:\\Program Files (x86)\\Android\\android-studio\\sdk
+#Wed Oct 29 10:41:45 CLST 2014
+sdk.dir=/Applications/Android Studio.app/sdk
